--- a/events.html
+++ b/events.html
@@ -2,76 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Events - Blitz Tesla Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="auth.js"></script>
-    <script src="nav.js"></script>
-    <style>
-        /* Footer Optimization */
-        body {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            margin: 0;
-        }
-
-        main {
-            flex: 1;
-            padding: 20px;
-        }
-
-        footer {
-            margin-top: auto;
-            width: 100%;
-            background: #171a20;
-        }
-
-        /* Responsive Footer */
-        @media screen and (max-width: 768px) {
-            .footer-content {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 20px;
-            }
-        }
-
-        @media screen and (max-width: 480px) {
-            .footer-content {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <script src="navigation.js" defer></script>
 </head>
 <body class="events-page">
     <nav>
-        <!-- Navigation content -->
+        <div class="logo">
+            <a href="index.html">
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
+                <span>BLITZ TESLA CLUB</span>
+            </a>
+        </div>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+        <ul class="nav-links">
+            <!-- Navigation items will be dynamically inserted by navigation.js -->
+        </ul>
     </nav>
 
-    <main class="events-container">
-        <!-- Public content visible to all -->
-        <div class="events-header">
-            <h1>Upcoming Events</h1>
-            <p>Join us at our exciting Tesla community events!</p>
-        </div>
-
-        <!-- Member-only content -->
-        <div class="member-only" style="display: none;">
-            <div class="dashboard-section">
-                <!-- ... dashboard content ... -->
-            </div>
-        </div>
-
-        <!-- Public events list -->
-        <div class="events-list">
-            <!-- ... public events content ... -->
-        </div>
+    <main>
+        <!-- Rest of your existing content -->
     </main>
 
-    <!-- Standard Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -105,10 +69,10 @@
             <div class="footer-section">
                 <h3>Connect With Us</h3>
                 <div class="footer-social">
-                    <a href="https://x.com/BlitzTClub" target="_blank" aria-label="Follow us on X">
+                    <a href="https://x.com/BlitzTClub" target="_blank" rel="noopener" aria-label="Follow us on X">
                         <i class="fa-brands fa-square-x-twitter"></i>
                     </a>
-                    <a href="https://www.instagram.com/blitztclub/" target="_blank" aria-label="Follow us on Instagram">
+                    <a href="https://www.instagram.com/blitztclub/" target="_blank" rel="noopener" aria-label="Follow us on Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -118,25 +82,9 @@
         <div class="footer-bottom">
             <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
             <p class="powered-by">
-                Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
+                Website powered by <a href="http://www.summitpixels.com" target="_blank" rel="noopener">SummitPixels</a>
             </p>
         </div>
     </footer>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            // Check login status
-            await checkLoginStatus();
-
-            // Mobile menu toggle
-            const menuToggle = document.querySelector('.menu-toggle');
-            const navLinks = document.querySelector('.nav-links');
-            if (menuToggle && navLinks) {
-                menuToggle.addEventListener('click', () => {
-                    navLinks.classList.toggle('active');
-                });
-            }
-        });
-    </script>
 </body>
 </html> 
