--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Gallery - Blitz Tesla Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -10,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="nav.js"></script>
-    <script src="config.js"></script>
+    <script src="navigation.js" defer></script>
     <style>
         .gallery-grid {
             display: grid;
@@ -204,7 +206,7 @@
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
                 <span>BLITZ TESLA CLUB</span>
             </a>
         </div>
@@ -212,17 +214,11 @@
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="executive.html">Executives</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="register.html">Join Us</a></li>
-            <li><a href="login.html">Login</a></li>
+            <!-- Navigation items will be dynamically inserted by navigation.js -->
         </ul>
     </nav>
 
-    <main class="gallery-container">
+    <main>
         <header class="gallery-header">
             <h1>Club Gallery</h1>
             <p>Memories from Our Past Events</p>
@@ -304,10 +300,9 @@
             <div class="footer-section">
                 <h3>Member Area</h3>
                 <div class="footer-links">
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
                     <a href="sponsors.html">Our Sponsors</a>
                     <a href="#member-benefits">Member Benefits</a>
+                    <a href="#" id="footerLogoutBtn">Logout</a>
                 </div>
             </div>
             
@@ -323,10 +318,10 @@
             <div class="footer-section">
                 <h3>Connect With Us</h3>
                 <div class="footer-social">
-                    <a href="https://x.com/BlitzTClub" target="_blank" aria-label="Follow us on X">
+                    <a href="https://x.com/BlitzTClub" target="_blank" rel="noopener" aria-label="Follow us on X">
                         <i class="fa-brands fa-square-x-twitter"></i>
                     </a>
-                    <a href="https://www.instagram.com/blitztclub/" target="_blank" aria-label="Follow us on Instagram">
+                    <a href="https://www.instagram.com/blitztclub/" target="_blank" rel="noopener" aria-label="Follow us on Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -336,7 +331,7 @@
         <div class="footer-bottom">
             <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
             <p class="powered-by">
-                Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
+                Website powered by <a href="http://www.summitpixels.com" target="_blank" rel="noopener">SummitPixels</a>
             </p>
         </div>
     </footer>
