--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+no<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Blitz Tesla Club - Home</title>
+    <title>Blitz T Club - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -221,8 +221,8 @@
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
-                <span>BLITZ TESLA CLUB</span>
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz T Club Logo" loading="lazy" width="50" height="50">
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
         <div class="menu-toggle">
@@ -237,7 +237,7 @@
         <section class="hero" id="home">
             <div class="section-content">
                 <div class="hero-logo">
-                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz Tesla Club Logo">
+                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz T Club Logo">
                 </div>
                 <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
@@ -295,7 +295,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
                 Website powered by <a href="http://www.summitpixels.com" target="_blank" rel="noopener">SummitPixels</a>
             </p>
