--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ no<!DOCTYPE html>
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz T Club Logo" loading="lazy" width="50" height="50">
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
@@ -237,7 +237,7 @@ no<!DOCTYPE html>
         <section class="hero" id="home">
             <div class="section-content">
                 <div class="hero-logo">
-                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz T Club Logo">
+                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz Tesla Club Logo">
                 </div>
                 <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
