--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ no<!DOCTYPE html>
         <section class="hero" id="home">
             <div class="section-content">
                 <div class="hero-logo">
-                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz Tesla Club Logo">
+                    <img src="https://i.postimg.cc/852KY6h6/logo.png" alt="Blitz Hero Logo">
                 </div>
                 <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
